# unethicaltools

./: .env.example  .gitignore  DESKTOP.md  README.md  auth.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
components/: AboutBrand.tsx  AllToolsList.tsx  AnimatedBackground.tsx  AudioConverter.tsx  BleepConverter.tsx  BleepHub.tsx  ConverterHub.tsx  DesktopBodyClass.tsx  DesktopConverter.tsx  DesktopHub.tsx  DesktopShell.tsx  DeviceMemoryStat.tsx  DownloadCards.tsx  DownloadHero.tsx  DownloadInfo.tsx  DropZone.tsx  ErrorView.tsx  FAQ.tsx  FeatureBadges.tsx  FilePreview.tsx  Footer.tsx  FormatExplainer.tsx  FormatHero.tsx  Hero.tsx  ImageConverter.tsx  InfoSection.tsx  InstallInstructions.tsx  MemoryControls.tsx  MemoryErrorView.tsx  ModelPicker.tsx  OversizedFileNotice.tsx  PageTransition.tsx  ProgressView.tsx  RelatedConverters.tsx  ResultView.tsx  SiteNav.tsx  StructuredData.tsx  SuggestionsForm.tsx  SuggestionsPanel.tsx  TranscribeConverter.tsx  (+2 more)
lib/: audio-converters.ts  audio-formats.ts  converter-client.ts  converter-engine.ts  converters.ts  desktop-bridge.ts  desktop-engine.ts  folder-colors.ts  format.ts  formats.ts  image-converters.ts  image-engine.ts  image-formats.ts  libheif-js.d.ts  memory.ts  privacy.ts  site.ts  structured-data.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+124 files in other folders)
